unpackaged/main/default/objects/OrderApi__Sales_Order__c/OrderApi__Sales_Order__c.object-meta.xml
<CustomObject>
    <description>Sales Orders are the primary object for all sales related transactions.</description>
    <label>Sales Order</label>
    <nameField>
        <displayFormat>{000000000}</displayFormat>
        <label>Sales Order #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Sales Orders</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>