unpackaged/main/default/objects/OrderApi__Sales_Order__c/fields/Actual_Balance__c.field-meta.xml
<CustomField>
    <fullName>Actual_Balance__c</fullName>
    <formula>FON_Actual_Sum__c - OrderApi__Amount_Paid__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Actual Balance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>