unpackaged/main/default/objects/OrderApi__Sales_Order__c/fields/Actual_Line_Total__c.field-meta.xml
<CustomField>
    <fullName>Actual_Line_Total__c</fullName>
    <label>Total</label>
    <summarizedField>OrderApi__Sales_Order_Line__c.OrderApi__Overall_Total__c</summarizedField>
    <summaryForeignKey>OrderApi__Sales_Order_Line__c.OrderApi__Sales_Order__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>