unpackaged/main/default/objects/OrderApi__Sales_Order__c/fields/Address__c.field-meta.xml
<CustomField>
    <fullName>Address__c</fullName>
    <formula>OrderApi__Billing_City__c &amp;&#39;,&#39;&amp;&#39; &#39;&amp; OrderApi__Billing_State__c &amp;&#39; &#39;&amp; OrderApi__Billing_Postal_Code__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Address</label>
    <type>Text</type>
</CustomField>