unpackaged/main/default/objects/OrderApi__Sales_Order__c/fields/Contact_Name__c.field-meta.xml
<CustomField>
    <fullName>Contact_Name__c</fullName>
    <formula>OrderApi__Contact__r.FirstName&amp;&#39; &#39;&amp;OrderApi__Contact__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contact Name</label>
    <type>Text</type>
</CustomField>