unpackaged/main/default/objects/OrderApi__Sales_Order__c/fields/Custom_Coverage__c.field-meta.xml
<CustomField>
    <fullName>Custom_Coverage__c</fullName>
    <inlineHelpText>Dues Coverage Dates to appear on Invoice</inlineHelpText>
    <label>Dues Cover</label>
    <length>255</length>
    <type>Text</type>
</CustomField>