unpackaged/main/default/objects/OrderApi__Sales_Order__c/fields/DDApi__Direct_Debit_First_Payment_Date__c.field-meta.xml
<CustomField>
    <fullName>DDApi__Direct_Debit_First_Payment_Date__c</fullName>
    <description>This field defines the date select by the end user to set the scheduled payment(s).</description>
    <inlineHelpText>This field defines the date select by the end user to set the scheduled payment(s).</inlineHelpText>
    <label>Direct Debit First Payment Date</label>
    <type>Date</type>
</CustomField>