unpackaged/main/default/objects/OrderApi__Sales_Order__c/fields/DDApi__Direct_Debit_Months_Added__c.field-meta.xml
<CustomField>
    <fullName>DDApi__Direct_Debit_Months_Added__c</fullName>
    <description>** SYSETEM GENERATED ** Used to capture the Start Month of the first payment for calculation of the scheduled payment&#39;s Scheduled Date</description>
    <inlineHelpText>** SYSETEM GENERATED ** Used to capture the Start Month of the first payment for calculation of the scheduled payment&#39;s Scheduled Date</inlineHelpText>
    <label>SYSTEM</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>