unpackaged/main/default/objects/OrderApi__Sales_Order__c/fields/DDApi__Is_Direct_Debit__c.field-meta.xml
<CustomField>
    <fullName>DDApi__Is_Direct_Debit__c</fullName>
    <defaultValue>false</defaultValue>
    <description>** System Calculated ** When checked, sales order has been checked out using a direct debit payment option and a mandate has been created. Defaults unchecked.</description>
    <inlineHelpText>** System Calculated ** When checked, sales order is checked out using a direct debit payment option and a mandate has been created. Defaults unchecked.</inlineHelpText>
    <label>Is Direct Debit</label>
    <type>Checkbox</type>
</CustomField>