unpackaged/main/default/objects/OrderApi__Sales_Order__c/fields/DDApi__Redirect_Flow__c.field-meta.xml
<CustomField>
    <fullName>DDApi__Redirect_Flow__c</fullName>
    <description>** SYSTEM GENERATED ** Unique Identifier for redirect flow created by GoCardless</description>
    <inlineHelpText>** SYSTEM GENERATED ** Unique Identifier for redirect flow created by GoCardless</inlineHelpText>
    <label>SYSTEM</label>
    <length>255</length>
    <type>Text</type>
</CustomField>