unpackaged/main/default/objects/OrderApi__Sales_Order__c/fields/DonorApi__Acknowledged_Date__c.field-meta.xml
<CustomField>
    <fullName>DonorApi__Acknowledged_Date__c</fullName>
    <description>The date a gift was acknowledged.</description>
    <inlineHelpText>The date a gift was acknowledged.</inlineHelpText>
    <label>Acknowledged Date</label>
    <type>Date</type>
</CustomField>