unpackaged/main/default/objects/OrderApi__Sales_Order__c/fields/DonorApi__Acknowledgement_Method__c.field-meta.xml
<CustomField>
    <fullName>DonorApi__Acknowledgement_Method__c</fullName>
    <description>Select the method of acknowledgement for the gift.</description>
    <inlineHelpText>Select the method of acknowledgement for the gift.</inlineHelpText>
    <label>Acknowledgement Method</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Email</fullName>
            </value>
            <value>
                <fullName>Letter</fullName>
            </value>
            <value>
                <fullName>Not Acknowledged</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Phone</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>