unpackaged/main/default/objects/OrderApi__Sales_Order__c/fields/DonorApi__Do_Not_Acknowledge__c.field-meta.xml
<CustomField>
    <fullName>DonorApi__Do_Not_Acknowledge__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Do not acknowledge this gift. When checked, the &quot;Is Gift Acknowledged&quot; flag will be unable to be checked and cause a validation message to display to the user.</description>
    <inlineHelpText>Do not acknowledge this gift. When checked, the &quot;Is Gift Acknowledged&quot; flag will be unable to be checked and cause a validation message to display to the user.</inlineHelpText>
    <label>Do Not Acknowledge</label>
    <type>Checkbox</type>
</CustomField>