unpackaged/main/default/objects/OrderApi__Sales_Order__c/fields/DonorApi__Forecast_Category__c.field-meta.xml
<CustomField>
    <fullName>DonorApi__Forecast_Category__c</fullName>
    <description>**Required** Select the category forecast category for the gift opportunity, used to classify the gift opportunities by best case, committed, open, won, lost, and on hold.</description>
    <inlineHelpText>**Required** Select the category forecast category for the gift opportunity, used to classify the gift opportunities by best case, committed, open, won, lost, and on hold.</inlineHelpText>
    <label>Forecast Category</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Open</fullName>
                <default>true</default>
                <label>Open</label>
            </value>
            <value>
                <fullName>On Hold</fullName>
            </value>
            <value>
                <fullName>Closed Won</fullName>
            </value>
            <value>
                <fullName>Closed Lost</fullName>
            </value>
            <value>
                <fullName>Best Case</fullName>
            </value>
            <value>
                <fullName>Comitted</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>