unpackaged/main/default/objects/OrderApi__Sales_Order__c/fields/DonorApi__Forecasted_Amount__c.field-meta.xml
<CustomField>
    <fullName>DonorApi__Forecasted_Amount__c</fullName>
    <description>**Required** The initial forecasted gift amount for the opportunity. This field is only editable when gift opportunities are created.</description>
    <inlineHelpText>**Required** The initial forecasted gift amount for the opportunity. This field is only editable when gift opportunities are created.</inlineHelpText>
    <label>Forecasted Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>