unpackaged/main/default/objects/OrderApi__Sales_Order__c/fields/DonorApi__Forecasted_Close_Date__c.field-meta.xml
<CustomField>
    <fullName>DonorApi__Forecasted_Close_Date__c</fullName>
    <description>**Required** The date the gift opportunity is projected to close.</description>
    <inlineHelpText>**Required** The date the gift opportunity is projected to close.</inlineHelpText>
    <label>Forecasted Close Date</label>
    <type>Date</type>
</CustomField>