unpackaged/main/default/objects/OrderApi__Sales_Order__c/fields/DonorApi__Gift_Match_Account__c.field-meta.xml
<CustomField>
    <fullName>DonorApi__Gift_Match_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The account that is matching the gift on the linked gift match opportunity record.</description>
    <inlineHelpText>The account that is matching the gift on the linked gift match opportunity record.</inlineHelpText>
    <label>Gift Match Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Sales Orders (Gift Match Account)</relationshipLabel>
    <relationshipName>Matched_Gifts</relationshipName>
    <type>Lookup</type>
</CustomField>