unpackaged/main/default/objects/OrderApi__Sales_Order__c/fields/DonorApi__Gift_Match_Amount__c.field-meta.xml
<CustomField>
    <fullName>DonorApi__Gift_Match_Amount__c</fullName>
    <description>The amount of the gift that will be matched.</description>
    <inlineHelpText>The amount of the gift that will be matched.</inlineHelpText>
    <label>Gift Match Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>