unpackaged/main/default/objects/OrderApi__Sales_Order__c/fields/DonorApi__Gift_Match_Contact__c.field-meta.xml
<CustomField>
    <fullName>DonorApi__Gift_Match_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The contact related to the linked gift match opportunity.</description>
    <label>Gift Match Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Matched Gifts</relationshipLabel>
    <relationshipName>Matched_Gifts</relationshipName>
    <type>Lookup</type>
</CustomField>