unpackaged/main/default/objects/OrderApi__Sales_Order__c/fields/DonorApi__Gift_Matching_Company__c.field-meta.xml
<CustomField>
    <fullName>DonorApi__Gift_Matching_Company__c</fullName>
    <label>Gift Matching Company</label>
    <length>255</length>
    <type>Text</type>
</CustomField>