unpackaged/main/default/objects/OrderApi__Sales_Order__c/fields/DonorApi__Gift_Type__c.field-meta.xml
<CustomField>
    <fullName>DonorApi__Gift_Type__c</fullName>
    <label>Gift Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Major Gift</fullName>
            </value>
            <value>
                <fullName>Grant</fullName>
            </value>
            <value>
                <fullName>Planned Giving</fullName>
            </value>
            <value>
                <fullName>Corporate Gift Match</fullName>
            </value>
            <value>
                <fullName>Personal Gift Match</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>