unpackaged/main/default/objects/OrderApi__Sales_Order__c/fields/DonorApi__Grant_LOI_Submitted__c.field-meta.xml
<CustomField>
    <fullName>DonorApi__Grant_LOI_Submitted__c</fullName>
    <description>Date the LOI was submitted for the grant.</description>
    <inlineHelpText>Date the LOI was submitted for the grant.</inlineHelpText>
    <label>Grant LOI Submitted</label>
    <type>Date</type>
</CustomField>