unpackaged/main/default/objects/OrderApi__Sales_Order__c/fields/DonorApi__Grant_Open_Date__c.field-meta.xml
<CustomField>
    <fullName>DonorApi__Grant_Open_Date__c</fullName>
    <description>The date the foundation started accepting applications for the grant.</description>
    <inlineHelpText>The date the foundation started accepting applications for the grant.</inlineHelpText>
    <label>Grant Open Date</label>
    <type>Date</type>
</CustomField>