unpackaged/main/default/objects/OrderApi__Sales_Order__c/fields/DonorApi__Grant_Proposal_Deadline__c.field-meta.xml
<CustomField>
    <fullName>DonorApi__Grant_Proposal_Deadline__c</fullName>
    <description>Date the proposal is due for the grant.</description>
    <inlineHelpText>Date the proposal is due for the grant.</inlineHelpText>
    <label>Grant Proposal Deadline</label>
    <type>Date</type>
</CustomField>