unpackaged/main/default/objects/OrderApi__Sales_Order__c/fields/DonorApi__Grant_Proposal_Response_Date__c.field-meta.xml
<CustomField>
    <fullName>DonorApi__Grant_Proposal_Response_Date__c</fullName>
    <description>The date the foundation accepted/rejected the grant proposal.</description>
    <inlineHelpText>The date the foundation accepted/rejected the grant proposal.</inlineHelpText>
    <label>Grant Proposal Response Date</label>
    <type>Date</type>
</CustomField>