unpackaged/main/default/objects/OrderApi__Sales_Order__c/fields/DonorApi__Grant_Proposal_Submitted__c.field-meta.xml
<CustomField>
    <fullName>DonorApi__Grant_Proposal_Submitted__c</fullName>
    <description>The date the proposal was submitted for the grant.</description>
    <inlineHelpText>The date the proposal was submitted for the grant.</inlineHelpText>
    <label>Grant Proposal Submitted</label>
    <type>Date</type>
</CustomField>