unpackaged/main/default/objects/OrderApi__Sales_Order__c/fields/DonorApi__Grant_Term__c.field-meta.xml
<CustomField>
    <fullName>DonorApi__Grant_Term__c</fullName>
    <description>Enter the term in months for the grant.</description>
    <inlineHelpText>Enter the term in months for the grant.</inlineHelpText>
    <label>Grant Term (Months)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>