unpackaged/main/default/objects/OrderApi__Sales_Order__c/fields/DonorApi__Is_Acknowledged__c.field-meta.xml
<CustomField>
    <fullName>DonorApi__Is_Acknowledged__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Primary indicator for the acknowledgement status for the gift.</description>
    <inlineHelpText>Primary indicator for the acknowledgement status for the gift.</inlineHelpText>
    <label>Is Acknowledged</label>
    <type>Checkbox</type>
</CustomField>