unpackaged/main/default/objects/OrderApi__Sales_Order__c/fields/DonorApi__Is_Won__c.field-meta.xml
<CustomField>
    <fullName>DonorApi__Is_Won__c</fullName>
    <defaultValue>false</defaultValue>
    <description>**System Calculated/Override** Checked when the value of the Fundraising Preferences custom setting field &quot;Gift Opportunity Closed Won Stages&quot; for the running user matches the stage of the record, otherwise the field is unchecked.</description>
    <inlineHelpText>**System Calculated/Override** Checked when the value of the Fundraising Preferences custom setting field &quot;Gift Opportunity Closed Won Stages&quot; for the running user matches the stage of the record, otherwise the field is unchecked.</inlineHelpText>
    <label>Is Won</label>
    <type>Checkbox</type>
</CustomField>