unpackaged/main/default/objects/OrderApi__Sales_Order__c/fields/DonorApi__Source__c.field-meta.xml
<CustomField>
    <fullName>DonorApi__Source__c</fullName>
    <description>Select the option that best describes the source of the gift opportunity record from the list of provided values.</description>
    <inlineHelpText>Select the option that best describes the source of the gift opportunity record from the list of provided values.</inlineHelpText>
    <label>Source</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Board Member</fullName>
            </value>
            <value>
                <fullName>Event</fullName>
            </value>
            <value>
                <fullName>Foundation</fullName>
            </value>
            <value>
                <fullName>Fundraiser</fullName>
            </value>
            <value>
                <fullName>Personal Solicitation</fullName>
            </value>
            <value>
                <fullName>Referral</fullName>
            </value>
            <value>
                <fullName>Staff</fullName>
            </value>
            <value>
                <fullName>Volunteer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>