unpackaged/main/default/objects/OrderApi__Sales_Order__c/fields/DonorApi__Stage__c.field-meta.xml
<CustomField>
    <fullName>DonorApi__Stage__c</fullName>
    <description>**Required** Dependent picklist for the Pipeline Category picklist field used for more specific categorization of opportunities.</description>
    <inlineHelpText>**Required** Dependent picklist for the Pipeline Category picklist field used for more specific categorization of opportunities.</inlineHelpText>
    <label>Stage</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>DonorApi__Gift_Type__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Major Gift - Cultivating</fullName>
            </value>
            <value>
                <fullName>Major Gift - Soliciting</fullName>
            </value>
            <value>
                <fullName>Major Gift - On Hold</fullName>
            </value>
            <value>
                <fullName>Major Gift - Won</fullName>
            </value>
            <value>
                <fullName>Major Gift - Lost</fullName>
            </value>
            <value>
                <fullName>Gift Match - Pending Submission</fullName>
            </value>
            <value>
                <fullName>Gift Match - Submitted</fullName>
            </value>
            <value>
                <fullName>Gift Match - Confirmed</fullName>
            </value>
            <value>
                <fullName>Gift Match - Received</fullName>
            </value>
            <value>
                <fullName>Gift Match - Disqualified</fullName>
            </value>
            <value>
                <fullName>Grant - Researching</fullName>
            </value>
            <value>
                <fullName>Grant - Developing LOI</fullName>
            </value>
            <value>
                <fullName>Grant - LOI Submitted</fullName>
            </value>
            <value>
                <fullName>Grant - Proposal Development</fullName>
            </value>
            <value>
                <fullName>Grant - Proposal Submitted</fullName>
            </value>
            <value>
                <fullName>Grant - Proposal Accepted</fullName>
            </value>
            <value>
                <fullName>Grant - Proposal Declined</fullName>
            </value>
            <value>
                <fullName>Planned Gift - Cultivating</fullName>
            </value>
            <value>
                <fullName>Planned Gift - Soliciting</fullName>
            </value>
            <value>
                <fullName>Planned Gift - Committed</fullName>
            </value>
            <value>
                <fullName>Planned Gift - Received</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>