unpackaged/main/default/objects/OrderApi__Sales_Order__c/fields/DonorApi__Tax_Deductible_Amount__c.field-meta.xml
<CustomField>
    <fullName>DonorApi__Tax_Deductible_Amount__c</fullName>
    <description>**System Calculated** The sum of the tax deductible amount field for related transaction lines.</description>
    <inlineHelpText>**System Calculated** The sum of the tax deductible amount field for related transaction lines.</inlineHelpText>
    <label>Tax Deductible Amount</label>
    <summarizedField>OrderApi__Sales_Order_Line__c.DonorApi__Tax_Deductible_Amount__c</summarizedField>
    <summaryForeignKey>OrderApi__Sales_Order_Line__c.OrderApi__Sales_Order__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>