unpackaged/main/default/objects/OrderApi__Sales_Order__c/fields/DonorApi__Tribute_Honoree__c.field-meta.xml
<CustomField>
    <fullName>DonorApi__Tribute_Honoree__c</fullName>
    <description>The name of the honoree for the tribute.</description>
    <inlineHelpText>The name of the honoree for the tribute.</inlineHelpText>
    <label>Tribute Honoree</label>
    <length>255</length>
    <type>Text</type>
</CustomField>