unpackaged/main/default/objects/OrderApi__Sales_Order__c/fields/DonorApi__Tribute_Message__c.field-meta.xml
<CustomField>
    <fullName>DonorApi__Tribute_Message__c</fullName>
    <description>The custom message the donor wishes to use for the tribute acknowledgement.</description>
    <inlineHelpText>The custom message the donor wishes to use for the tribute acknowledgement.</inlineHelpText>
    <label>Tribute Message</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>