unpackaged/main/default/objects/OrderApi__Sales_Order__c/fields/DonorApi__Tribute_Notification_City__c.field-meta.xml
<CustomField>
    <fullName>DonorApi__Tribute_Notification_City__c</fullName>
    <description>City used to acknowledge the tribute on the gift record.</description>
    <inlineHelpText>City used to acknowledge the tribute on the gift record.</inlineHelpText>
    <label>Tribute Notification City</label>
    <length>255</length>
    <type>Text</type>
</CustomField>