unpackaged/main/default/objects/OrderApi__Sales_Order__c/fields/DonorApi__Tribute_Notification_Country__c.field-meta.xml
<CustomField>
    <fullName>DonorApi__Tribute_Notification_Country__c</fullName>
    <description>Country used to acknowledge the tribute on the gift record.</description>
    <inlineHelpText>Country used to acknowledge the tribute on the gift record.</inlineHelpText>
    <label>Tribute Notification Country</label>
    <length>255</length>
    <type>Text</type>
</CustomField>