unpackaged/main/default/objects/OrderApi__Sales_Order__c/fields/DonorApi__Tribute_Notification_Email__c.field-meta.xml
<CustomField>
    <fullName>DonorApi__Tribute_Notification_Email__c</fullName>
    <description>Email used to acknowledge the tribute on the gift record.</description>
    <inlineHelpText>Email used to acknowledge the tribute on the gift record.</inlineHelpText>
    <label>Tribute Notification Email</label>
    <type>Email</type>
</CustomField>