unpackaged/main/default/objects/OrderApi__Sales_Order__c/fields/DonorApi__Tribute_Notification_Method__c.field-meta.xml
<CustomField>
    <fullName>DonorApi__Tribute_Notification_Method__c</fullName>
    <description>Select the notification method used to acknowledge the tribute on the gift record.</description>
    <inlineHelpText>Select the notification method used to acknowledge the tribute on the gift record.</inlineHelpText>
    <label>Tribute Notification Method</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Email</fullName>
            </value>
            <value>
                <fullName>Mail</fullName>
            </value>
            <value>
                <fullName>Phone</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>