unpackaged/main/default/objects/OrderApi__Sales_Order__c/fields/DonorApi__Tribute_Notification_Phone__c.field-meta.xml
<CustomField>
    <fullName>DonorApi__Tribute_Notification_Phone__c</fullName>
    <description>Phone used to acknowledge the tribute on the gift record.</description>
    <inlineHelpText>Phone used to acknowledge the tribute on the gift record.</inlineHelpText>
    <label>Tribute Notification Phone</label>
    <type>Phone</type>
</CustomField>