unpackaged/main/default/objects/OrderApi__Sales_Order__c/fields/DonorApi__Tribute_Notification_Postal_Code__c.field-meta.xml
<CustomField>
    <fullName>DonorApi__Tribute_Notification_Postal_Code__c</fullName>
    <description>Postal Code used to acknowledge the tribute on the gift record.</description>
    <inlineHelpText>Postal Code used to acknowledge the tribute on the gift record.</inlineHelpText>
    <label>Tribute Notification Postal Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>