unpackaged/main/default/objects/OrderApi__Sales_Order__c/fields/DonorApi__Tribute_Notification_State__c.field-meta.xml
<CustomField>
    <fullName>DonorApi__Tribute_Notification_State__c</fullName>
    <description>State used to acknowledge the tribute on the gift record.</description>
    <inlineHelpText>State used to acknowledge the tribute on the gift record.</inlineHelpText>
    <label>Tribute Notification State</label>
    <length>255</length>
    <type>Text</type>
</CustomField>