unpackaged/main/default/objects/OrderApi__Sales_Order__c/fields/DonorApi__Tribute_Notification_Street__c.field-meta.xml
<CustomField>
    <fullName>DonorApi__Tribute_Notification_Street__c</fullName>
    <description>Street used to acknowledge the tribute on the gift record.</description>
    <inlineHelpText>Street used to acknowledge the tribute on the gift record.</inlineHelpText>
    <label>Tribute Notification Street</label>
    <length>255</length>
    <type>Text</type>
</CustomField>