unpackaged/main/default/objects/OrderApi__Sales_Order__c/fields/DonorApi__Tribute_Notified__c.field-meta.xml
<CustomField>
    <fullName>DonorApi__Tribute_Notified__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check the field when the tribute person to notify has been notified.</description>
    <inlineHelpText>Check the field when the tribute person to notify has been notified.</inlineHelpText>
    <label>Tribute Notified</label>
    <type>Checkbox</type>
</CustomField>