unpackaged/main/default/objects/OrderApi__Sales_Order__c/fields/DonorApi__Tribute_Person_to_Notify__c.field-meta.xml
<CustomField>
    <fullName>DonorApi__Tribute_Person_to_Notify__c</fullName>
    <description>The person to notify regarding the tribute on the gift record.</description>
    <inlineHelpText>The person to notify regarding the tribute on the gift record.</inlineHelpText>
    <label>Tribute Person to Notify</label>
    <length>255</length>
    <type>Text</type>
</CustomField>