unpackaged/main/default/objects/OrderApi__Sales_Order__c/fields/DonorApi__Tribute_Type__c.field-meta.xml
<CustomField>
    <fullName>DonorApi__Tribute_Type__c</fullName>
    <label>Tribute Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>In Honor Of</fullName>
            </value>
            <value>
                <fullName>In Memory of</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>