unpackaged/main/default/objects/OrderApi__Sales_Order__c/fields/FON_Actual_Sum__c.field-meta.xml
<CustomField>
    <fullName>FON_Actual_Sum__c</fullName>
    <label>Actual Sum</label>
    <summarizedField>OrderApi__Sales_Order_Line__c.OrderApi__Total__c</summarizedField>
    <summaryForeignKey>OrderApi__Sales_Order_Line__c.OrderApi__Sales_Order__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>