unpackaged/main/default/objects/OrderApi__Sales_Order__c/fields/FON_Billing_Contacts__c.field-meta.xml
<CustomField>
    <fullName>FON_Billing_Contacts__c</fullName>
    <inlineHelpText>*System Generated* Trigger will populate the billing contacts based on the information on the Contact record</inlineHelpText>
    <label>Billing Contacts</label>
    <type>TextArea</type>
</CustomField>