unpackaged/main/default/objects/OrderApi__Sales_Order__c/fields/FON_Billing_Quarter__c.field-meta.xml
<CustomField>
    <fullName>FON_Billing_Quarter__c</fullName>
    <inlineHelpText>*System Generated* Based upon what is specified when Invoice is created. Can manually add the value if needed.</inlineHelpText>
    <label>Billing Quarter</label>
    <length>10</length>
    <type>Text</type>
</CustomField>