unpackaged/main/default/objects/OrderApi__Sales_Order__c/fields/FON_Billing_Type__c.field-meta.xml
<CustomField>
    <fullName>FON_Billing_Type__c</fullName>
    <inlineHelpText>*System Generated* Based on value populated when creating the invoice. Can manually populate if needed.</inlineHelpText>
    <label>Billing Type</label>
    <length>25</length>
    <type>Text</type>
</CustomField>