unpackaged/main/default/objects/OrderApi__Sales_Order__c/fields/FON_CE_Late_Filing_Order__c.field-meta.xml
<CustomField>
    <fullName>FON_CE_Late_Filing_Order__c</fullName>
    <label>Is CE Late Filing Order</label>
    <summaryFilterItems>
        <field>OrderApi__Sales_Order_Line__c.OrderApi__Item_Name__c</field>
        <operation>contains</operation>
        <value>Late Filing Fee</value>
    </summaryFilterItems>
    <summaryForeignKey>OrderApi__Sales_Order_Line__c.OrderApi__Sales_Order__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>