unpackaged/main/default/objects/OrderApi__Sales_Order__c/fields/FON_Credit_Filing__c.field-meta.xml
<CustomField>
    <fullName>FON_Credit_Filing__c</fullName>
    <label>Credit Filing</label>
    <summaryFilterItems>
        <field>OrderApi__Sales_Order_Line__c.OrderApi__Line_Description__c</field>
        <operation>equals</operation>
        <value>NCP CE Credit Filing Fee</value>
    </summaryFilterItems>
    <summaryForeignKey>OrderApi__Sales_Order_Line__c.OrderApi__Sales_Order__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>