unpackaged/main/default/objects/OrderApi__Sales_Order__c/fields/FON_Document_ID__c.field-meta.xml
<CustomField>
    <fullName>FON_Document_ID__c</fullName>
    <formula>IF(
    RIGHT(OrderApi__Encrypted_Id__c, 1) = &quot;=&quot;,
    LEFT(OrderApi__Encrypted_Id__c, LEN(OrderApi__Encrypted_Id__c) - 1) &amp; &quot;%3D&quot;,
    OrderApi__Encrypted_Id__c
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Document ID</label>
    <type>Text</type>
</CustomField>