unpackaged/main/default/objects/OrderApi__Sales_Order__c/fields/FON_Has_Event__c.field-meta.xml
<CustomField>
    <fullName>FON_Has_Event__c</fullName>
    <label>Has Event</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>