unpackaged/main/default/objects/OrderApi__Sales_Order__c/fields/FON_Invoice_Timing__c.field-meta.xml
<CustomField>
    <fullName>FON_Invoice_Timing__c</fullName>
    <inlineHelpText>*System Generated* Based on the value populated when creating the invoice. Can be manually populated if need be</inlineHelpText>
    <label>Invoice Timing</label>
    <length>25</length>
    <type>Text</type>
</CustomField>