unpackaged/main/default/objects/OrderApi__Sales_Order__c/fields/FON_Invoice_Timing_Annual_or_Quarterly__c.field-meta.xml
<CustomField>
    <fullName>FON_Invoice_Timing_Annual_or_Quarterly__c</fullName>
    <formula>CASE(OrderApi__Account__r.FON_Invoice_Timing__c,
&quot;Annual&quot;,&quot;Annual&quot;,
&quot;Quarterly&quot;,&quot;Quarterly&quot;,
NULL)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Invoice Timing | Annual or Quarterly</label>
    <type>Text</type>
</CustomField>