unpackaged/main/default/objects/OrderApi__Sales_Order__c/fields/FON_Invoice_Year__c.field-meta.xml
<CustomField>
    <fullName>FON_Invoice_Year__c</fullName>
    <inlineHelpText>Please denote the last 2 digits of the year only. Example: 2019 input is 19</inlineHelpText>
    <label>Invoice Year</label>
    <length>2</length>
    <type>Text</type>
</CustomField>