unpackaged/main/default/objects/OrderApi__Sales_Order__c/fields/FON_Membership_Activation_Date__c.field-meta.xml
<CustomField>
    <fullName>FON_Membership_Activation_Date__c</fullName>
    <inlineHelpText>Roll-up summary of the membership activation date listed on the sales order line</inlineHelpText>
    <label>Membership Activation Date</label>
    <summarizedField>OrderApi__Sales_Order_Line__c.OrderApi__Activation_Date__c</summarizedField>
    <summaryForeignKey>OrderApi__Sales_Order_Line__c.OrderApi__Sales_Order__c</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>